2005-12-13  Dalibor Topic  <robilad@kaffe.org>

        * libraries/javalib/external/classpath: Resynched GNU Classpath.

2005-12-11  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/nio/gnu_java_nio_VMPipe.c:
	Added file from GNU Classpath.

	* include/Makefile.am: Added gnu_java_nio_VMPipe.h to 
	generated headers.

	* libraries/clib/nio/Makefile.am: Added gnu_java_nio_VMPipe.c.

	* libraries/javalib/Makefile.am.in: Only link glibj.zip to rt.jar if
	such link does not exist.

	* libraries/javalib/vmspecific/gnu/java/nio/VMPipe.java:
	Switched back to version from GNU Classpath, to avoid confusing the
	GNU Classpath jni function comparison scripts.

2005-12-11  Guilhem Lavaux  <guilhem@kaffe.org>

	* test/regression/TestSerialPersistent.java: Fix expected output.
	At the moment it is exactly the same compared to JDK's. Removed
	private modifiers.

2005-12-11  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Pass on jikes program name to 
	GNU Classpath's configure script.

	Reported by:  Kiyo Inaba  <inaba@src.ricoh.co.jp>

2005-12-11  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Check for SIZE_MAX. Fixes a build issue on Irix.

	Reported by:  Riccardo Mottola  <riccardo@kaffe.org>

2005-12-11  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/Makefile.am.in:
	(install-hook) Renamed to 
	(install-data-local), so that it gets picked up by automake.
	Added a dependency on installdirs to make sure its ran after the 
	directories are created.
	(uninstall-local) Added.

        Reported by:  Alejandro Mery  <amery@geeks.cl>

2005-12-10  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/native/java_lang_VMProcess.c
	(Java_java_lang_VMProcess_nativeSpawn): Spawn in the correct
	dir, if one is given.

        Reported by:  Alejandro Mery  <amery@geeks.cl>

2005-12-10  Guilhem Lavaux  <guilhem@kaffe.org>

	* test/regression/TestSerialFields.java,
	test/regression/TestSerialPersistent.java,