@@ -1,3 +1,9 @@
+2005-12-13  Ito Kazumitsu  <kaz@maczuka.gcd.org>
+
+	* kaffe/kaffevm/access.c
+	(outerof): New function,
+	(checkAccess): Corrected the handling of private access.
+
 2005-12-13  Dalibor Topic  <robilad@kaffe.org>
 
         * libraries/javalib/external/classpath: Resynched GNU Classpath.
